src/scss/components/_page-nav.scss
@use '../abstract/variables' as *;
@use '../abstract/mixins' as *;

.page-nav {
  --banner-offset: 5rem;

  position: absolute;
  z-index: 3;
  inset-inline: 0;
  top: 0;
  margin-inline: 1rem;
  padding-block-start: calc(1rem + var(--banner-offset, 0));
  transform: translateY(0);
  text-transform: uppercase;
  text-wrap: balance;
  opacity: 1;

  @include screen(sm) {
    display: grid;
    grid-template-columns: auto auto;
    justify-content: space-between;
  }
  @include screen(lg) {
    column-gap: 1rem;
    grid-template-columns: minmax(0, 1fr) auto minmax(0, 1fr);
    margin-block-end: 0;
  }

  &--inert {
    user-select: none;
    pointer-events: none;
  }

  &--hidden {
    transition: all 0.2s;
    transform: translateY(-100%);
    opacity: 0;

    + div:has(.home-hero) {
      transform: translateY(0);
    }
  }

  .no-js.home & {
    display: none;
  }

  &__brand {
    position: relative;
    display: inline-block;
    justify-self: start;
    padding-block-end: 1em;
    text-decoration: none;

    @include screen(lg) {
      grid-column: 2;
    }

    &::after {
      position: absolute;
      bottom: calc(1em + 1px);
      left: 0;
      width: 100%;
      height: 1px;
      content: '';
      transition: transform 0.2s $ease-out-editorial;
      transform: scaleX(0);
      transform-origin: 100% 0;
      background-color: currentColor;
      @media (prefers-reduced-motion: reduce) {
        transition-duration: 0s;
      }
    }

    &:hover {
      &::after {
        transform: scaleX(1);
        transform-origin: 0 0;
      }
    }
  }

  &__brand-flag {
    width: max-content;
    transition: all 0.2s;
    color: $color-text-mid;
    @media (prefers-reduced-motion: reduce) {
      transition-duration: 0s;
    }

    @include screen(sm) {
      position: absolute;
      left: calc(100% + 0.5ch);
      transform: translateX(-1rem);
      opacity: 0;
    }
    @include screen(lg) {
      top: 1.1em;
      left: 0;
      width: 100%;
      transform: translateY(-1rem);
      text-align: center;
    }
    @include screen(1270px) {
      top: unset;
      left: calc(100% + 0.5ch);
      width: max-content;
      transform: translateX(-1rem);
      text-align: left;
    }

    &::before {
      display: inline-block;
      margin-inline-end: 0.5ch;
      content: '—';

      @include screen(sm) {
        transition: all 0.2s;
        transform: translateX(0.5rem);
      }
      @include screen(lg) {
        display: none;
      }
      @include screen(1270px) {
        display: inline-block;
        transform: translateX(0.5rem);
      }
    }

    a:hover & {
      transform: translateX(0);
      opacity: 1;

      @include screen(lg) {
        transform: translateY(0);
      }
      @include screen(1270px) {
        transform: translateX(0);
      }

      &::before {
        transform: translateX(0);

        @include screen(lg) {
          transform: translateY(0);
        }
        @include screen(1270px) {
          transform: translateX(0);
        }
      }
    }
  }

  &__tagline {
    max-width: 30ch;
    margin-block-end: 1em;
    color: $color-text-mid;

    @include screen(sm) {
      grid-row-end: span 2;
      text-align: right;
    }
    @include screen(lg) {
      max-width: unset;
    }

    > span {
      color: $color-text;
    }
  }

  &__back-link {
    position: relative;
    display: inline-block;
    text-decoration: none;

    @include screen(lg) {
      grid-column: 1;
      grid-row: 1;
    }

    span {
      position: absolute;
      left: 1.5ch;
      display: inline-block;
      width: max-content;
      margin-block-start: -1em;
      padding-block: 1em;
      transform-origin: 0 0;
      clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);

      &::after {
        position: absolute;
        bottom: calc(1em + 1px);
        left: 0;
        width: 100%;
        height: 1px;
        content: '';
        transition: transform 0.2s $ease-out-editorial;
        transform: scaleX(0);
        transform-origin: 100% 0;
        background-color: currentColor;
        @media (prefers-reduced-motion: reduce) {
          transition-duration: 0s;
        }
      }
    }

    &:hover,
    &:active {
      span::after {
        transform: scaleX(1);
        transform-origin: 0 0;
      }
    }
  }
}

